**Changelog**

[V1.0.5]
DONE - video playlists
DONE - pvr info screen rework (header - 2 column mode)
DONE - Add user options for menu customisation to skin settings
DONE - album default art fix
DONE - rework fullscreen options OSD

- picture section fix

DONE - Reworked music fullscreen menu. Ensure closes properly on stop

[V1.0.4]
- Minor tweaks and bug fixes
- [NEW] User option to remove weather data from homescreen

[V1.0.3]
- Minor bug fixes and tweaks
- [CHANGED] TVShow Episode count now reflects watched / unwatched status
- [CHANGED] TVShow view revised to poster view
- [NEW] Basic weather info now available on homescreen
- [CHANGED] Default and skin colour options revised
- [NEW] Higher quality homescreen backgrounds

[V1.0.2]
- Bug fixes
- Extra colour themes added

[V1.0.0]
- Initial release
- [UPDATED] MyMusicPlaylistEditor.xml
- [REMOVED] Unused images
- Minor fixes and bug squashing (thanks Ronie!)