@@ -94,8 +94,8 @@
                 <content>
                     <include condition="window.isactive(home)">skinshortcuts-mainmenu</include>
                     <include condition="window.isactive(pictures)">skinshortcuts-group-picturessubmenu</include>
-                    <include condition="[window.isactive(1106) + String.IsEqual(skin.string(recentitems),music)] | window.isactive(music) | window.isactive(radiochannels) | window.isactive(radioguide) | window.isactive(radiorecordings) | window.isactive(radiotimers)">skinshortcuts-group-musicsubmenu</include>
-                    <include condition="[window.isactive(1106) + String.IsEqual(skin.string(recentitems),video)] | window.isactive(videos) | window.isactive(tvchannels) | window.isactive(tvrecordings) | window.isactive(tvguide) | window.isactive(tvtimers)">skinshortcuts-group-videosubmenu</include>
+                    <include condition="[window.isactive(1106) + String.IsEqual(skin.string(recentitems),music)] | window.isactive(music) | window.isactive(radiochannels) | window.isactive(radioguide) | window.isactive(radiorecordings) | window.isactive(radiotimers) | window.isactive(musicplaylist)">skinshortcuts-group-musicsubmenu</include>
+                    <include condition="[window.isactive(1106) + String.IsEqual(skin.string(recentitems),video)] | window.isactive(videos) | window.isactive(tvchannels) | window.isactive(tvrecordings) | window.isactive(tvguide) | window.isactive(tvtimers) | window.isactive(videoplaylist)">skinshortcuts-group-videosubmenu</include>
                 </content>
             </control>
         </control>
