@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <window type="dialog" id="1101">
-    <onload>Dialog.Close(1103,true)</onload>
+    <onload>Dialog.Close(1103)</onload>
     <visible>Window.IsActive(1103) + !player.hasaudio</visible>
     <controls></controls>
 </window>
